--- a/calc/style.css
+++ b/calc/style.css
@@ -18,6 +18,8 @@ body {
   margin: auto;
 }
 
+.
+
 /* .header {
   display: flex;
   align-items: center;
@@ -68,6 +70,7 @@ body {
   background: #1890ff;
   border: 1px solid #1890ff;
   color: #fff;
+  transform: scale 1,1;
 }
 
 .main {
