--- a/calc/style.css
+++ b/calc/style.css
@@ -18,6 +18,25 @@ body {
   margin: auto;
 }
 
+.input-field:out-of-range {
+  background-color: rgb(221, 129, 129);
+  animation-name: scale;
+  animation-duration: 3s; /*name duration timing-function delay  direction fill-mode;*/
+  animation-iteration-count: infinite;
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 /* .header {
   display: flex;
   align-items: center;
